Solución al ejercicio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <h1>Iniciar Sesión</h1>
-      <form>
+      <form id="login">
         <div class="input-container">
           <label for="email">Email</label>
           <input
@@ -36,6 +36,7 @@
         <button class="login-btn" type="button">Inciar sesión</button>
       </form>
     </main>
+    <script src="./scripts/base-de-datos.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
